# rust-quest

./: .gitignore  LICENSE  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: astro.yml  build-test.yml  changelog.yml  ci.yml  deploy-dev.yml  pr-description.yml  preview.yml
api/: .gitignore  Cargo.toml  bacon.toml  flake.nix
api/src/: main.rs
feedbacker/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile copy  flake.nix  run
feedbacker/.cargo/: config.toml
feedbacker/assets/: sort-table.js  table.css
feedbacker/src/: config.rs  main.rs  utils.rs
feedbacker/src/routes/: feedback.rs  index.rs  mod.rs
frontend/: .gitignore  .prettierignore  astro.config.mjs  biome.json  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: content.config.ts
frontend/src/codemirror-themes/: github-dark.ts  github-light.ts
frontend/src/components/: Card.astro  CodeBlock.svelte  CodeQuestion.astro  Comic.astro  Donate.astro  Feedback.astro  Highlight.astro  Hint.astro  LanguageDetector.astro  LanguageDetector.svelte  PortraitCard.astro  Progress.astro  Progress.svelte  QuestionCard.astro  WIP.astro  WIP.mdx
frontend/src/content/: config.ts
frontend/src/interpreter/: index.ts  interpreter.ts  worker.ts
frontend/src/persistence/: checkpoint.ts  codeBlock.ts  saveData.ts
frontend/src/styles/: custom.css
frontend/src/utils/: alert.ts  colors.ts  confetti.ts  evaluateCode.ts  langs.ts  onThemeChange.ts  popup.ts  querySelector.ts  saveData.ts  strings.ts  userSession.ts
frontend/src/validation/: 0-0.ts  0-robot.ts  1-1.ts  2-1.ts  2-2.ts  2-3.ts  2-4.ts  2-5.ts  2-6.ts  2-7.ts  2-8.ts  3-1.ts  3-2.ts  3-3.ts  3-4.ts  3-5.ts  4-1.ts  4-2.ts  4-3.ts  4-4.ts  5-1.ts  5-2-robot.ts  5-3-robot.ts  5-4-robot.ts  5-5-robot.ts  5-6-robot.ts  5-7-robot.ts  5-8-robot.ts  5-9-robot.ts  6-1.ts  CodeQuestion.ts  regex.ts
runner/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker.sh  flake.nix  run_docker.sh  stress.sh
runner/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
runner/.direnv/flake-inputs/: 0jcjifxpwnpmvl3g4bg4c9ck0i89kffi-source  adigq0658cj2rxdxrcy3ji3g6ia3w442-source  rc6ny38m90gwgv2a260gxsfd2z1wbcb1-source  rj6pqzx66pliiwdfk2wjnnlk40rm3mpd-source
runner/custom-core/: Cargo.toml
runner/custom-core/src/: lib.rs
runner/custom-std/: Cargo.toml
runner/custom-std/src/: lib.rs
runner/project-template/: Cargo.toml
runner/project-template/custom-core/: Cargo.toml
runner/project-template/custom-core/src/: lib.rs
runner/project-template/custom-std/: Cargo.toml
runner/project-template/custom-std/src/: lib.rs
runner/project-template/src/: lib.rs  main.rs
runner/src/: main.rs  run.rs
src/codemirror-themes/: github-dark.ts  github-light.ts
src/components/: CodeBlock.svelte  CodeBlock.tsx  QuestionCard.astro
src/content/docs/: index.mdx
src/content/i18n/: ca.json
src/styles/: custom.css
src/utils/: getLangFromUrl.ts  onThemeChange.ts  shortcut.ts
(+103 files in other folders)
