[package]
name = "feedbacker"
version = "0.1.0"
edition = "2021"

[dependencies]
figment = { version = "0.10.14", features = ["env"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
time = { version = "0.3.34", features = ["serde", "serde-human-readable"] }
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }
serde_yaml = "0.9.32"
minify-html = "0.15.0"
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa = "4.2.0"

[profile.release]
opt-level = 3       # Optimize for performance.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
