[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
rust-embed = { version = "8.0.0", features = ["debug-embed", "compression", "include-exclude"] }
serde = { version = "1.0.192", features = ["derive"] }
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "process"] }
warp = "0.3.6"
