[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console-subscriber = "0.2.0"
envy = "0.4.2"
parking_lot = "0.12.1"
serde = { version = "1.0.192", features = ["derive"] }
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "process", "tracing"] }
warp = "0.3.6"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false